force-app/main/default/objects/TESTDATE__c/TESTDATE__c.object-meta.xml
<CustomObject>
    <label>TESTDATE</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>TESTDATE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TESTDATES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>