force-app/main/default/objects/TESTDATE__c/fields/DATE_CLOTURE__c.field-meta.xml
<CustomField>
    <fullName>DATE_CLOTURE__c</fullName>
    <formula>IF(DATE_CLOTURE_INITIALE__c &lt;= TODAY() + 2,DATE_CLOTURE_INITIALE__c, 
 IF ( AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 0,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +2) , DATE_ESTIMEE_LIVTAISON__c + 2,
  IF(AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 1,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +2) , DATE_ESTIMEE_LIVTAISON__c + 2,
   IF(AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 2,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +2) , DATE_ESTIMEE_LIVTAISON__c + 2,
    IF (AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 3,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +2) , DATE_ESTIMEE_LIVTAISON__c + 2,
     IF(AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 4,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +4) , DATE_ESTIMEE_LIVTAISON__c + 4,
      IF(AND(MOD(DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7),7)= 5,  DATE_CLOTURE_INITIALE__c &lt; DATE_ESTIMEE_LIVTAISON__c +3) , DATE_ESTIMEE_LIVTAISON__c + 
       3,DATE_CLOTURE_INITIALE__c )
     )
    )
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DATE CLOTURE RECALCULEE</label>
    <type>Date</type>
</CustomField>