force-app/main/default/objects/TESTDATE__c/fields/DATE_CLOTURE_INITIALE__c.field-meta.xml
<CustomField>
    <fullName>DATE_CLOTURE_INITIALE__c</fullName>
    <label>DATE CLOTURE INITIALE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>