force-app/main/default/objects/TESTDATE__c/fields/DATE_ESTIMEE_LIVTAISON__c.field-meta.xml
<CustomField>
    <fullName>DATE_ESTIMEE_LIVTAISON__c</fullName>
    <label>ESTIMATED SHIPPING DATE</label>
    <type>Date</type>
</CustomField>