force-app/main/default/objects/TESTDATE__c/fields/DATE_NON_DIMANCHE__c.field-meta.xml
<CustomField>
    <fullName>DATE_NON_DIMANCHE__c</fullName>
    <label>DATE NON DIMANCHE</label>
    <type>Date</type>
</CustomField>