force-app/main/default/objects/TESTDATE__c/fields/DATE_NON_SAMEDI__c.field-meta.xml
<CustomField>
    <fullName>DATE_NON_SAMEDI__c</fullName>
    <label>DATE NON SAMEDI</label>
    <type>Date</type>
</CustomField>