force-app/main/default/objects/TESTDATE__c/fields/JOUR_DATE_CLOTURE_RECACULEE__c.field-meta.xml
<CustomField>
    <fullName>JOUR_DATE_CLOTURE_RECACULEE__c</fullName>
    <formula>CASE( MOD(  DATE_CLOTURE__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JOUR DATE CLOTURE RECACULEE</label>
    <type>Text</type>
</CustomField>