force-app/main/default/objects/TESTDATE__c/fields/JOUR_ESTIMATED_SHIPPING_DATE__c.field-meta.xml
<CustomField>
    <fullName>JOUR_ESTIMATED_SHIPPING_DATE__c</fullName>
    <formula>CASE( MOD(  DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JOUR ESTIMATED SHIPPING DATE</label>
    <type>Text</type>
</CustomField>