force-app/main/default/objects/TESTDATE__c/fields/MOTIF_DU_RETARD__c.field-meta.xml
<CustomField>
    <fullName>MOTIF_DU_RETARD__c</fullName>
    <formula>IF( DATE_ESTIMEE_LIVTAISON__c &lt; TODAY()+3 , &quot;&quot;, &quot;Problem case&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOTIF DU RETARD</label>
    <type>Text</type>
</CustomField>