force-app/main/default/objects/TESTDATE__c/validationRules/No_saturday.validationRule-meta.xml
<ValidationRule>
    <fullName>No_saturday</fullName>
    <active>true</active>
    <errorConditionFormula>MOD(  DATE_ESTIMEE_LIVTAISON__c  - DATE(1900, 1, 7), 7)= 6</errorConditionFormula>
    <errorDisplayField>DATE_ESTIMEE_LIVTAISON__c</errorDisplayField>
    <errorMessage>No parcel shipped out on Saturday, the estimated shipping day must not be Saturday</errorMessage>
</ValidationRule>