force-app/main/default/objects/TESTDATE__c/validationRules/No_sunday.validationRule-meta.xml
<ValidationRule>
    <fullName>No_sunday</fullName>
    <active>true</active>
    <errorConditionFormula>MOD(DATE_NON_DIMANCHE__c  - DATE(1900, 1, 7), 7)= 0</errorConditionFormula>
    <errorMessage>La commande ne peut pas être livrée le dimanche.
Merci de votre compréhension.</errorMessage>
</ValidationRule>